ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: sampleapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sampleapp-svc
                port:
                  number: 80
